@@ -13,6 +13,9 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ### Fixed
 - [FRONTEND] [CLONE] Resolve GUI loading problems when cloning an existing Frontend
 - [FRONTEND] [FILEBEAT] Avoid overriding default module config for all Frontends when changed in one
+- [FRONTEND] Disable logforwarder if logging disabled
+- [FRONTEND] Reload services only on involved nodes
+
 
 ## [2.9.0] - 2023-07-20
 ### Removed
@@ -50,6 +53,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - [PORTAL] [SELF_SERVICE] Correctly list available applications for users connected through local repositories
 - [PORTAL] [SSO] Avoid SSO errors when using local repositories
 - [CLUSTER_CREATE] Some Node IPs were missing from Node's DB and on-disk configurations after cluster creation
+
 
 ## [2.8.2] - 2023-07-05
 ### Fixed
